fix(ButtonCheckAnswer): fix position styles for button on mobile devices

--- a/src/shared/UI/buttons/ButtonCheckAnswer/ButtonCheckAnswer.scss
+++ b/src/shared/UI/buttons/ButtonCheckAnswer/ButtonCheckAnswer.scss
@@ -8,7 +8,7 @@
   display: flex;
 
   @media (max-width: 600px) {
-    justify-self: end;
+    margin-left: auto;
     margin-right: 30px;
   }
 
